hard-gists/78e41a5065136e41bccbffdaab108492/run.log
=== Docker Run Log for 78e41a5065136e41bccbffdaab108492 ===
Started at: Mi 29. Okt 17:22:12 CET 2025

[2025-10-29 17:22:12] START: Running container for 78e41a5065136e41bccbffdaab108492
[2025-10-29 17:22:13] SUCCESS: Container bb3ef54d4587b905b7370520cb35e43627298d60972f3202ac818ffb1e8921f6 started for 78e41a5065136e41bccbffdaab108492
=== Container logs for 78e41a5065136e41bccbffdaab108492 ===
  File "/snippet.py", line 47
    print 'Filling buffer...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 78e41a5065136e41bccbffdaab108492 ===
[2025-10-29 17:22:15] INFO: Container bb3ef54d4587b905b7370520cb35e43627298d60972f3202ac818ffb1e8921f6 has stopped
